Adding pylint and some refactor code
